--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,12 +10,12 @@
 
   <p>Looking for another Film? Make your search here!</p>
   <form [formGroup]="searchForm" (ngSubmit)="searchBtn(searchForm, getIndex())">
-      <input type="text" formControlName="search" placeholder="Name" required=""
+      <input type="text" formControlName="search" placeholder="Search..." required=""
       autofocus="">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
 <br>
-    <p *ngIf="searchResult?.Search?.length > 0"> Are you looking for one of these Films? Click on search again to see more results </p>
+    <p *ngIf="searchResult?.Search?.length > 0"> Are you looking for one of these Films? Click on search button again to see more results </p>
     <p *ngIf="searchResult?.Response == 'False'"> We can't find what you're looking for in our database? Try again </p>
 
   <ul>
